k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appcatalog
  labels:
    app: appcatalog
spec:
  # LoadBalancer : AKS provisionne automatiquement une IP publique.
  # Le port public 80 est redirigé vers le port 8080 du conteneur.
  type: LoadBalancer
  selector:
    app: appcatalog
  ports:
    - name: http
      port: 80
      targetPort: http
